--- a/gradle.properties
+++ b/gradle.properties
@@ -25,4 +25,4 @@ modmenu_version=9.0.0
 owo_version=0.12.0+1.20.3
 
 # https://maven.wispforest.io/io/wispforest/lavender/
-lavender_version=0.1.0-pre.20+1.20.2
+lavender_version=0.1.7+1.20.3
